--- a/mobile/package.json
+++ b/mobile/package.json
@@ -14,6 +14,7 @@
     "@react-navigation/bottom-tabs": "^6.5.3",
     "@react-navigation/native": "^6.1.2",
     "@react-navigation/stack": "^6.3.11",
+    "axios": "^1.2.3",
     "expo": "~47.0.12",
     "expo-barcode-scanner": "~12.1.0",
     "expo-status-bar": "~1.4.2",
