--- a/mobile/package.json
+++ b/mobile/package.json
@@ -18,6 +18,8 @@
     "expo": "~47.0.12",
     "expo-barcode-scanner": "~12.1.0",
     "expo-status-bar": "~1.4.2",
+    "moment": "^2.29.4",
+    "momentjs": "^2.0.0",
     "react": "18.1.0",
     "react-dom": "18.1.0",
     "react-native": "0.70.5",
