--- a/mobile/package.json
+++ b/mobile/package.json
@@ -14,12 +14,14 @@
     "@react-navigation/bottom-tabs": "^6.5.3",
     "@react-navigation/native": "^6.1.2",
     "@react-navigation/stack": "^6.3.11",
+    "@react-pdf/renderer": "^3.1.3",
     "axios": "^1.2.3",
     "expo": "~47.0.12",
     "expo-barcode-scanner": "~12.1.0",
     "expo-status-bar": "~1.4.2",
     "moment": "^2.29.4",
     "momentjs": "^2.0.0",
+    "print-js": "^1.6.0",
     "react": "18.1.0",
     "react-dom": "18.1.0",
     "react-native": "0.70.5",
