--- a/mobile/package.json
+++ b/mobile/package.json
@@ -11,14 +11,22 @@
   "dependencies": {
     "@expo/webpack-config": "^0.17.2",
     "@react-native-async-storage/async-storage": "~1.17.3",
+    "@react-native-community/netinfo": "9.3.5",
     "@react-navigation/bottom-tabs": "^6.5.3",
     "@react-navigation/native": "^6.1.2",
     "@react-navigation/stack": "^6.3.11",
     "@react-pdf/renderer": "^3.1.3",
     "axios": "^1.2.3",
     "expo": "~47.0.12",
+    "expo-asset": "~8.7.0",
     "expo-barcode-scanner": "~12.1.0",
+    "expo-dev-client": "^2.1.5",
+    "expo-file-system": "~15.1.1",
+    "expo-print": "^12.2.1",
+    "expo-sharing": "^11.2.2",
+    "expo-sqlite": "~11.0.0",
     "expo-status-bar": "~1.4.2",
+    "intl": "^1.2.5",
     "moment": "^2.29.4",
     "momentjs": "^2.0.0",
     "print-js": "^1.6.0",
